# ZAR

./: .env  .gitignore  2026-04-16-development-modes.md  AWS setup for ZAR activation.md  bring-up-v0.2.sh  bring-up.sh  clerk_integration_design.md  docker-compose.v0.2.yml  docker-compose.yml  handoff.md  min_viable_entitlements.csv  neon-onboarding-zar-setup.md  nginx.edge.conf  readme.md  sample_zar_config.yaml  zoe_security_design_overview.md
backend/: Dockerfile  config.json  package-lock.json  package.json  tsconfig.json
backend/src/: config.ts  index.ts
onboarding/: .env  Dockerfile  README.md  pyproject.toml
onboarding/app/: __init__.py  config.py  db.py  main.py
sample_frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
sample_frontend/src/: main.tsx  styles.css
sample_frontend/src/app/: App.tsx  constants.ts
sample_frontend/src/components/: AuthFrame.tsx  ProtectedContent.tsx
sample_frontend/src/hooks/: useInvitationDetails.ts  useProtectedSession.ts
sample_frontend/src/orgAdmin/: DashboardPane.tsx  MattersPane.tsx  SettingsPane.tsx  UsersRolesPane.tsx  YouPane.tsx  icons.tsx  types.ts
sample_frontend/src/pages/: AcceptInvitationPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  SignupPage.tsx  (+1 more)
user-admin/: .env  Dockerfile  README.md  pyproject.toml
user-admin/app/: __init__.py  config.py  db.py  main.py
v0.2/: Dockerfile  README.md  basic_entitlements_1May.sql  config.json  package-lock.json  package.json
v0.2/config/: Schema-1May.yaml
v0.2/src/: index.ts
(+12 files in other folders)
